added account creation, login, dashboard with CSS.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@azure/core-asynciterator-polyfill": "^1.0.2",
     "@expo/vector-icons": "^14.0.0",
     "@journeyapps/react-native-quick-sqlite": "^1.1.5",
+    "@parse/react-native": "^0.0.1-alpha.18",
     "@powersync/kysely-driver": "^0.2.0",
     "@powersync/react-native": "~1.4.5",
     "@react-native-async-storage/async-storage": "1.21.0",
