--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@powersync/kysely-driver": "^0.2.0",
     "@powersync/react-native": "~1.4.5",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-navigation/drawer": "~6.6.6",
     "@react-navigation/native": "^6.1.7",
     "@supabase/supabase-js": "^2.38.4",
     "base-64": "^1.0.0",
@@ -37,6 +38,7 @@
     "react-native-fetch-api": "^3.0.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-get-random-values": "1.9.0",
+    "react-native-paper": "^5.12.5",
     "react-native-polyfill-globals": "^3.1.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
@@ -50,6 +52,7 @@
     "@babel/core": "^7.20.0",
     "@babel/plugin-transform-async-generator-functions": "^7.24.3",
     "@types/react": "~18.2.14",
+    "@types/react-native": "^0.72.8",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.0",
