--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/drawer": "~6.6.6",
     "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.20",
     "@supabase/supabase-js": "^2.38.4",
     "base-64": "^1.0.0",
     "expo": "^50.0.17",
