--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-fetch-api": "^3.0.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-get-random-values": "1.9.0",
